<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FB</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="record_start">Record Start</string>
    <string name="record_stop">Record Stop</string>
    <string name="play_start">Play Start</string>
    <string name="play_stop">Play Stop</string>
    <string name="wav2opust">Wav to Opus</string>
    <string name="opus2wav">Opus to Wav</string>
    <string name="paly_decode_wav">Play Decode Wav</string>
</resources>